--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "patientor-backend",
-  "version": "0.0.0",
   "private": true,
+  "version": "0.0.0",
   "scripts": {
     "tsc": "tsc",
     "dev": "node -r ts-node/register --watch index.ts",
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@stylistic/eslint-plugin": "^2.6.2",
+    "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "eslint": "^9.9.0",
@@ -22,6 +23,7 @@
     "typescript-eslint": "^8.1.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   }
 }
