--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "tsc": "tsc",
-    "dev": "node -r ts-node/register --watch index.ts",
+    "dev": "node -r ts-node/register --watch src/index.ts",
     "start": "node build/index.js",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
