--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.9.0",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "uuid": "^10.0.0"
   }
 }
